tests/ui/traits/const-traits/non-const-op-const-closure-non-const-outer.stderr
error: cannot use `const` closures outside of const contexts
  --> $DIR/non-const-op-const-closure-non-const-outer.rs:15:6
   |
LL |     (const || { (()).foo() })();
   |      ^^^^^

error: aborting due to 1 previous error

